# terminal.army

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.md
alembic/: env.py
alembic/versions/: 20260511_0000_0001_init.py  20260511_0100_0002_messages.py  20260511_0200_0003_device_sessions.py  20260511_0300_0004_fleet_combat.py  20260512_0000_0005_alliances.py  20260512_0100_0006_alliance_join_requests.py  20260512_0200_0007_planet_code.py
backend/app/: config.py  csrf.py  db.py  deps.py  main.py  presence.py  rate_limit.py  scheduler.py  security.py  web_templates.py
backend/app/api/: admin.py  admin_ui.py  alliance.py  auth.py  building.py  defense.py  device.py  fleet.py  galaxy.py  leaderboard.py  planet.py  quest.py  research.py  shipyard.py  social.py  stats.py  universe.py  web.py
backend/app/game/: colonization.py  constants.py  fleet.py  formulas.py  production.py  tech_tree.py
backend/app/models/: __init__.py  alliance.py  building.py  device_session.py  fleet.py  message.py  planet.py  queue.py  report.py  research.py  ship.py  universe.py  user.py
backend/app/schemas/: auth.py  building.py  galaxy.py  planet.py  queue.py  research.py
backend/app/services/: build_service.py  defense_service.py  fleet_service.py  planet_code.py  quests.py  queue_service.py  research_service.py  resource_service.py  scoring_service.py  shipyard_service.py  universe_service.py
backend/app/static/: main.css
backend/app/templates/: _logo.html  _topbar.html  alliance_detail.html  alliances.html  base.html  dashboard.html  install.html  leaderboard.html  lobby.html  login.html  me.html  players.html  signup.html  terminal_success.html
backend/app/templates/admin/: forbidden.html  index.html  planet.html  user.html
backend/scripts/: create_admin.py  migrate.py  seed_universe.py
backend/tests/: conftest.py  test_auth_flow.py  test_building_queue.py  test_colonization.py  test_formulas.py  test_health.py  test_research_and_galaxy.py  test_resource_lazy_update.py
deploy/: Caddyfile.example
docs/: DEPLOY.md  SHARDING.md
docs/screenshots/: README.md
scripts/: install.sh
tui/ogame_tui/: __main__.py  app.py  cli.py  client.py  credentials.py  encyclopedia.py  options.py
tui/ogame_tui/screens/: repl.py
tui/terminal_army/: __main__.py  app.py  cli.py  client.py  credentials.py  encyclopedia.py  options.py
tui/terminal_army/screens/: repl.py
