[project]
name = "sakusen"
version = "0.1.0"
description = "Sakusen (策戦) — terminal-native multiplayer space strategy"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Mert Cobanov", email = "mertcobanov@gmail.com" }]
keywords = ["ogame", "tui", "game", "fastapi", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
    "textual>=0.60.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.0",
]

[project.scripts]
sakusen = "ogame_tui.cli:main"
sakusen-server = "ogame_tui.cli:server_main"
# Legacy aliases (will be removed after the next public release):
ogame = "ogame_tui.cli:main"
ogame-server = "ogame_tui.cli:server_main"

[project.urls]
Repository = "https://github.com/cobanov/space-galactic-tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "tui/ogame_tui"]

[tool.hatch.build.targets.wheel.sources]
"tui/ogame_tui" = "ogame_tui"

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "alembic"
"alembic.ini" = "alembic.ini"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true
