[project]
name = "terminal-army"
version = "0.1.0"
description = "terminal.army — multiplayer space strategy from your terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Mert Cobanov", email = "mertcobanov@gmail.com" }]
keywords = ["ogame", "tui", "game", "fastapi", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "textual>=0.60.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.0",
]

[project.scripts]
# Primary short name — what install instructions point at.
tarmy = "terminal_army.cli:main"
tarmy-server = "terminal_army.cli:server_main"
# Longer name kept available too.
terminal-army = "terminal_army.cli:main"
terminal-army-server = "terminal_army.cli:server_main"
# Backwards-compat aliases — keep so existing installs don't break.
sakusen = "terminal_army.cli:main"
sakusen-server = "terminal_army.cli:server_main"
ogame = "terminal_army.cli:main"
ogame-server = "terminal_army.cli:server_main"

[project.urls]
Repository = "https://github.com/cobanov/space-galactic-tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "tui/terminal_army"]

[tool.hatch.build.targets.wheel.sources]
"tui/terminal_army" = "terminal_army"

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "alembic"
"alembic.ini" = "alembic.ini"
"backend/app/templates" = "backend/app/templates"
"backend/app/static" = "backend/app/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# E501: line length (handled by formatter)
# RUF003: Turkish characters in comments (project is Turkish-language)
# RUF012: mutable class attrs (Textual classes use them by convention)
# RUF059: unused unpacked names (helpful pattern: m,c,d = COSTS[...])
ignore = ["E501", "RUF003", "RUF012", "RUF059"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true
